[project]
name = "se-t-a2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cleverhans==4.0.0",
    "matplotlib==3.7.1",
    "numpy<2.0.0,>=1.23.5",
    "scipy==1.13.1",
    "tensorflow-macos==2.12.0",
    "tensorflow-metal==1.0.0",
    "torch==1.12.1",
    "torchvision==0.13.1",
    "tqdm==4.67.1",
]
