[project]
name = "se-t-a2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow [and-cuda] ; sys_platform == 'linux' or sys_platform == 'win32'",
    "matplotlib==3.7.1",
    "scipy==1.13.1",
    "numpy==1.23.5",
    "tensorflow ; sys_platform == 'darwin'",
    "tensorflow-metal ; sys_platform == 'darwin'",
    "torch==1.12.1",
    "torchvision==0.13.1",
    "cleverhans==4.0.0",
    "tqdm==4.65.1",
    "opencv-python-headless",
]
